changed the logic of questions and their structure. added api for answering questions
